# vst-garage

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build-and-release.yml
plugins/: CMakeLists.txt
plugins/controllers/virtual-key/: requirements.txt
plugins/controllers/virtual-key/config/: default_mapping.json
plugins/controllers/virtual-key/src/: main.py
plugins/controllers/virtual-key/src/core/: spatial.py
plugins/controllers/virtual-key/src/midi/: mpe_engine.py
plugins/controllers/virtual-key/src/utils/: filters.py
plugins/vst/AutoTunes/: AutoTunes.jucer
plugins/vst/AutoTunes/JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
plugins/vst/AutoTunes/Source/: PluginARADocumentController.cpp  PluginARADocumentController.h  PluginARAPlaybackRenderer.cpp  PluginARAPlaybackRenderer.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/vst/NewProject/: CMakeLists.txt  NewProject.jucer
plugins/vst/NewProject/JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
plugins/vst/NewProject/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/vst/PFix/: PFix.jucer
plugins/vst/PFix/JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
plugins/vst/PFix/Source/: PitchDataQueue.h  PitchDetector.cpp  PitchDetector.h  PitchGraphComponent.cpp  PitchGraphComponent.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
web/: package-lock.json  package.json  tailwind.config.ts
web/public/data/: catalog.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/lib/: mockBillingApi.ts
